APF-2034-changed the map implementation to linkedhashmap for options